--- a/app/_common/components/RichTextEditor/editorStyle.css
+++ b/app/_common/components/RichTextEditor/editorStyle.css
@@ -29,3 +29,14 @@
 .ProseMirror::-webkit-scrollbar-thumb:hover {
   background-color: #a0a0a0;
 }
+
+/* ---------- */
+.ProseMirror h1 {
+  font-size: 1.5rem; /* or 30px */
+  margin: 0.6em 0;
+}
+
+.ProseMirror h2 {
+  font-size: 1.2rem; /* or 24px */
+  margin: 0.4em 0;
+}
